src/test/ui/const-generics/const-param-shadowing.stderr
error[E0747]: type provided when a constant was expected
  --> $DIR/const-param-shadowing.rs:5:34
   |
LL | fn test<const N: usize>() -> Foo<N> {
   |                                  ^
   |
help: if this generic argument was intended as a const parameter, try surrounding it with braces:
   |
LL | fn test<const N: usize>() -> Foo<{ N }> {
   |                                  ^   ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
